fix time picker indicator in dark mode

--- a/resources/sass/field.scss
+++ b/resources/sass/field.scss
@@ -3,3 +3,7 @@
     padding-top: 1.125rem;
     padding-bottom: 1.125rem;
 }
+
+.dark .openingHours input::-webkit-calendar-picker-indicator {
+    filter: invert(0.75);
+}
